--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luau</title>
+    <title>Luau na Praia</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
         <div class="container">
             <img class="hero__logo" src="./images/logo.png" alt="EBAC">
             <p class="hero__text">
-                O maior evento de tecnologia do Brasil começa em <span id="contador"></span>
+                O maior luau na praia do Brasil começa em 26d 12h 20m 53s
             </p>
             <div class="infos-bar">
                 <ul class="infos-bar__infos">
