Criando a contagem regressiva

--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,13 @@
         <div class="container">
             <img class="hero__logo" src="./images/logo.png" alt="EBAC">
             <p class="hero__text">
-                O maior luau na praia do Brasil começa em 26d 12h 20m 53s
+                O maior luau à beira-mar do Brasil começa em <br><span id="contador"></span>
             </p>
             <div class="infos-bar">
                 <ul class="infos-bar__infos">
                     <li class="infos-bar__infos__item">
                         <b>Localização</b>
-                        Allianz Parque - Barra Funda - São Paulo
+                        Praia de Coqueirinho - Paraiba
                     </li>
                     <li class="infos-bar__infos__item">
                         <b>Preço</b>
@@ -29,7 +29,7 @@
                     </li>
                     <li class="infos-bar__infos__item">
                         <b>Quando</b>
-                        12/12/2022 às 19hrs
+                        26/04/2025 às 19hrs
                     </li>
                 </ul>
                 <a href="#" class="button button--primary">
@@ -38,6 +38,43 @@
             </div>
         </div>
     </header>
+    <section class="event event--buffet">
+        <div class="container" data-aos="fade-right">
+            <div class="event__details">
+                <h2 class="event__details__title">Buffet</h2>
+                <p class="event__details__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sint totam dolor saepe nostrum debitis odio accusamus quod, labore molestiae ad error repellat maxime culpa, sapiente ex? At, iure id?</p>
+            </div>
+            <img class="event__image" src="images/buffet.png" alt="Mesas com comidas">
+        </div>
+    </section>
+    <section class="event event--bebidas event--image-left">
+        <div class="container" data-aos="fade-left">
+            <div class="event__details">
+                <h2 class="event__details__title">Bebidas</h2>
+                <p class="event__details__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sint totam dolor saepe nostrum debitis odio accusamus quod, labore molestiae ad error repellat maxime culpa, sapiente ex? At, iure id?</p>
+            </div>
+            <img class="event__image" src="images/bebidas.png" alt="Mesas com bebidas">
+        </div>
+    </section>
+    <section class="event event--danca_sol">
+        <div class="container" data-aos="fade-right">
+            <div class="event__details">
+                <h2 class="event__details__title">Dança do Sol</h2>
+                <p class="event__details__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sint totam dolor saepe nostrum debitis odio accusamus quod, labore molestiae ad error repellat maxime culpa, sapiente ex? At, iure id?</p>
+            </div>
+            <img class="event__image" src="images/danca_sol.png" alt="Dança do Sol">
+        </div>
+    </section>
+    <section class="event event--praia event--image-left">
+        <div class="container" data-aos="fade-left">
+            <div class="event__details">
+                <h2 class="event__details__title">Praia</h2>
+                <p class="event__details__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sint totam dolor saepe nostrum debitis odio accusamus quod, labore molestiae ad error repellat maxime culpa, sapiente ex? At, iure id?</p>
+            </div>
+            <img class="event__image" src="images/praia.png" alt="Praia">
+        </div>
+    </section>
+
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="scripts/main.js"></script>
 </body>
